# tabc_control_chart

./: .gitignore  README.md  build-scripts.txt
faststat/: DESCRIPTION  NAMESPACE
faststat/R/: RcppExports.R
faststat/man/: cucconi-package.Rd  multisampleCucconiTest.Rd
faststat/src/: CMakeLists.txt  RcppExports.cpp  cucconi_multisample_test.cpp  faststat.cpp  r_binding.cpp
npcharts/: DESCRIPTION  NAMESPACE
npcharts/R/: RcppExports.R  turbostat-pkg.R
npcharts/man/: calibrate.unconditional.Rd  (+7 more)
r_scripts/: Tabc-improved.R  Tabc-marozzi.R  chart_limits.R  chart_limits_2.R  comparing-tabc-with-lepage.R  comparing-tabc-with-xbar.R  lepage functions new (2).R  statistics.R  testing-lepage-chart.R  testing-tabc-chart.R  testing_limits.R
r_scripts_results/: OOC_curves.R  aggregate_results.R  build_crl_table.R  calibrate.R  calibrate_and_evaluate.R  calibrate_and_evaluate_location.R  calibrate_and_evaluate_location_scale.R  calibrate_and_evaluate_scale.R  conditional_calibration.R  convert_to_latex.R  convert_to_latex_simple.R  distribution_free_charts.R  evaluate.R  evaluate_conditional_distribution.R  real_dataset_test.R  result_arl_table.R  sample_thesis_code.R  simple_chart_evaluation.R
r_scripts_test/: ansari_bradley_test.R  lepage_test.R  piston_rings_test.R  test_Ta.R  test_Tabc.R  test_Tb.R  test_Tc.R  test_cucconi.r  test_find_UCL.R  test_parallel_sum.R  test_permutation_equivalence.R  test_pistonrings.R  test_sumOfRanks.R  test_unbalanced_symmetry.R  test_uncoditional.R  test_xtable.R
turbostat/: DESCRIPTION  NAMESPACE
turbostat/src/: CMakeLists.txt  Makevars  RcppExports.cpp  TaRBinding.cpp  TaRBinding.h  TestClass.h  calibration.cpp  calibration.h  data_aspects.cpp  data_aspects.h  distribution.cpp  distribution.h  distribution_dispatching.cpp  distribution_dispatching.h  distributions.h  evaluation.cpp  evaluation.h  fast_permtest.cpp  fast_permtest.h  faststat.cpp  faststat.h  global_rng.cpp  global_rng.h  monitoring_statistic.h  monitoring_statistic_wrappers.cpp  monitoring_statistic_wrappers.h  multiple_aspects.cpp  multiple_aspects.h  npc_df_chart.cpp  npc_df_chart.h  permutation_monitoring_statistic.cpp  permutation_monitoring_statistic.h  r_binding.cpp  r_binding_charts.cpp  r_binding_rng.cpp  r_binding_tabc.cpp  r_binding_testing.cpp  runlength.cpp  runlength.h  simple_stats.cpp  (+13 more)
turbostat/src/chart/: runlength.cpp  runlength.h  single_aspect.h  turbotabc.cpp  turbotabc.h  utils.h
turbostat/src/charts/: monitoring_statistic_wrappers.h
turbostat/src/charts/calibration/: calibration.cpp  calibration.h
turbostat/src/charts/evaluation/: evaluation.cpp  evaluation.h
turbostat/src/old/: TestClass.cpp
turbostat/src/old_Rcpp/: calibration.cpp  calibration.h  data_aspects.cpp  evaluation.cpp  evaluation.h  runlength.cpp  single_aspect.cpp  turbotabc.cpp
turbostat/src/rng/: global_rng.h
turbostat/src/stat/: ITest.h  Ta.cpp  Ta.h  distribution.cpp  distribution.h  simple_stats.cpp  simple_stats.h  statistic_interface.h
turbostat/src/stat/tests/: multiple_aspects.h  single_aspect.h
turbostat/src/tests/: test_Ta.cpp  test_data_aspects.cpp  test_multiple_aspects.cpp  test_sample_with_replacement.cpp  test_sum_of_ranks.cpp
turbostat_old/: NAMESPACE
(+85 files in other folders)
